Add sensible JVM options in forked JVM (#2)
* Add default JVM options for forked run

* Add release notes for 0.1.1